Add TypeScript configuration options for module interoperability, enabling esModuleInterop and synthetic default imports.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
         ],
         "module": "ESNext",
         "skipLibCheck": true,
+        /* Module interoperability */
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
         /* Bundler mode */
         "moduleResolution": "bundler",
         "allowImportingTsExtensions": true,
