Refactor project structure to separate frontend and backend components, remove unused files, and update .gitignore for environment variables and testing artifacts. Enhance README to reflect full-stack architecture and installation instructions.

--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,6 @@ dist
 dist-ssr
 *.local
 
-# Testing
-coverage
-.nyc_output
-
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -27,3 +23,17 @@ coverage
 *.sln
 *.sw?
 
+# Environment variables
+.env
+.env.local
+.env.production.local
+.env.development.local
+
+# Testing
+coverage
+.nyc_output
+
+# Database
+backend/data/
+frontend/dist/
+backend/dist/
