Update testing configuration in package.json to allow tests to pass with no tests present. Enhance README with detailed testing instructions and coverage information, including notes on dependencies and compilation requirements for better-sqlite3.

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "test": "jest --forceExit"
+    "test": "jest --forceExit --passWithNoTests"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -18,10 +18,12 @@
     "@types/cors": "^2.8.17",
     "@types/better-sqlite3": "^7.6.8",
     "@types/node": "^20.10.6",
+    "@types/supertest": "^6.0.2",
     "tsx": "^4.7.0",
     "typescript": "^5.2.2",
     "jest": "^29.7.0",
     "@types/jest": "^29.5.11",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "supertest": "^6.3.3"
   }
 }
