Refactor database handling to use sqlite3 instead of better-sqlite3, update user service methods to return promises for async handling, and enhance error handling in server initialization. Update Jest configuration to include tsconfig path and adjust user routes for async operations.

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,6 +6,10 @@
             "ES2022"
         ],
         "moduleResolution": "node",
+        "types": [
+            "node",
+            "jest"
+        ],
         "rootDir": "./src",
         "outDir": "./dist",
         "strict": true,
