--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "better-sqlite3": "^9.2.2"
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
-    "@types/better-sqlite3": "^7.6.8",
+    "@types/sqlite3": "^3.1.11",
     "@types/node": "^20.10.6",
     "@types/supertest": "^6.0.2",
     "tsx": "^4.7.0",
