--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "sqlite3": "^5.1.7",
     "validator": "^13.15.23"
   },
@@ -24,6 +25,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.10.6",
     "@types/sqlite3": "^3.1.11",
     "@types/supertest": "^6.0.2",
