--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "npm run dev:backend & npm run dev:frontend",
     "dev:frontend": "cd frontend && npm run dev",
     "dev:backend": "cd backend && npm run dev",
+    "dev:restart": "powershell -ExecutionPolicy Bypass -File ./restart-dev.ps1",
+    "dev:kill": "powershell -ExecutionPolicy Bypass -File ./kill-servers.ps1",
     "build": "npm run build:backend && npm run build:frontend",
     "build:frontend": "cd frontend && npm run build",
     "build:backend": "cd backend && npm run build",
