Implement passwordless authentication with magic links: update backend routes and services to handle magic link requests for registration and login, modify user model to include nickname and last access timestamp, and enhance frontend components for magic link handling and user profile management.

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "test": "jest --forceExit --passWithNoTests"
   },
   "dependencies": {
+    "@types/nodemailer": "^7.0.4",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -16,6 +17,7 @@
     "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
     "sqlite3": "^5.1.7",
     "validator": "^13.15.23"
   },
