--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,15 +1,25 @@
-﻿# Server Configuration
+# Server Configuration
 PORT=3001
 NODE_ENV=development
+BASE_URL=http://localhost:3001
+
+# Database Configuration
 DB_PATH=./data/habitus.db
 
 # JWT Configuration
 JWT_SECRET=your-secret-key-change-in-production
 JWT_EXPIRES_IN=7d
 
-# Google OAuth Configuration
-# Get these from https://console.cloud.google.com/
-GOOGLE_CLIENT_ID=your-client-id.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=your-client-secret
-GOOGLE_REDIRECT_URI=http://localhost:3001/api/auth/google/callback
+# Magic Link Configuration
+MAGIC_LINK_EXPIRY_MINUTES=15
+
+# Frontend URL
 FRONTEND_URL=http://localhost:3000
+
+# SMTP Configuration (Required for email functionality)
+# For Gmail, you'll need to use an App Password: https://support.google.com/accounts/answer/185833
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+
