Refactor backend configuration and server setup: Simplify development script in package.json, enhance server.ts to initialize Vite dev server for improved frontend integration, and update CORS handling based on environment. Modify api.ts to support relative URLs in development and improve error handling in ApiClient. Update vite.config.ts to remove unnecessary proxy configuration. Ensure all changes are documented with JSDoc comments for clarity and maintainability.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "npm run dev:backend & npm run dev:frontend",
-    "dev:frontend": "cd frontend && npm run dev",
+    "dev": "npm run dev:backend",
     "dev:backend": "cd backend && npm run dev",
     "dev:restart": "powershell -ExecutionPolicy Bypass -File ./restart-dev.ps1",
     "dev:kill": "powershell -ExecutionPolicy Bypass -File ./kill-servers.ps1",
