--- a/backend/package.json
+++ b/backend/package.json
@@ -30,10 +30,12 @@
     "@types/sqlite3": "^3.1.11",
     "@types/supertest": "^6.0.2",
     "@types/validator": "^13.15.10",
+    "@vitejs/plugin-react": "^4.2.1",
     "jest": "^29.7.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "tsx": "^4.7.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8"
   }
 }
