Update server management scripts and .gitignore: Modify kill-servers.ps1 and restart-dev.ps1 to streamline server stopping and starting processes, consolidating frontend and backend into a unified server process. Enhance .gitignore to include uploads directory and remove the obsolete backend/.gitignore file. Ensure all changes are documented and maintain code clarity.

--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,8 @@ dist-ssr
 coverage
 .nyc_output
 
-# Database
+# Database and uploads
 backend/data/
+backend/uploads/
 frontend/dist/
 backend/dist/
