--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "npm run dev:backend",
     "dev:backend": "cd backend && npm run dev",
-    "dev:restart": "powershell -ExecutionPolicy Bypass -File ./restart-dev.ps1",
-    "dev:kill": "powershell -ExecutionPolicy Bypass -File ./kill-servers.ps1",
+    "dev:restart": "powershell -ExecutionPolicy Bypass -File ./scripts/restart-server.ps1",
+    "dev:kill": "powershell -ExecutionPolicy Bypass -File ./scripts/kill-server.ps1",
     "build": "npm run build:backend && npm run build:frontend",
     "build:frontend": "cd frontend && npm run build",
     "build:backend": "cd backend && npm run build",
