Enhance .gitignore and update README for unified server architecture: Add Vite temporary files to .gitignore to prevent clutter. Revise README to clarify the unified server setup, including updated development commands and environment variable usage. Ensure all documentation is clear and consistent with recent changes.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@ dist
 dist-ssr
 *.local
 
+# Vite temporary files
+vite.config.ts.timestamp-*.mjs
+*.timestamp-*.mjs
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
