--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "npm run dev:backend",
-    "dev:backend": "cd backend && npm run dev",
+    "dev": "cd backend && npm run dev",
     "build": "npm run build:backend && npm run build:frontend",
     "build:frontend": "cd frontend && npm run build",
     "build:backend": "cd backend && npm run build",
