--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch --exclude \"dist/**\" --exclude \"data/**\" --exclude \"coverage/**\" --exclude \"node_modules/**\" --exclude \"../frontend/**\" src/server.ts",
+    "dev": "nodemon",
     "build": "tsc",
     "start": "node dist/server.js",
     "test": "jest --forceExit --passWithNoTests"
@@ -32,6 +32,7 @@
     "@types/validator": "^13.15.10",
     "@vitejs/plugin-react": "^4.2.1",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.11",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "tsx": "^4.7.0",
