--- a/package.json
+++ b/package.json
@@ -8,15 +8,21 @@
     "build": "npm run build:backend && npm run build:frontend",
     "build:frontend": "cd frontend && npm run build",
     "build:backend": "cd backend && npm run build",
-    "test": "npm run test:frontend && npm run test:backend",
+    "test": "jest --forceExit",
     "test:frontend": "cd frontend && npm test",
     "test:backend": "cd backend && npm test",
-    "test:watch": "cd frontend && npm run test:watch",
-    "test:coverage": "npm run test:coverage:frontend && npm run test:coverage:backend",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --forceExit",
     "test:coverage:frontend": "cd frontend && npm run test:coverage",
     "test:coverage:backend": "cd backend && npm test",
     "lint": "npm run lint:frontend",
     "lint:frontend": "cd frontend && npm run lint",
     "install:all": "npm install"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "npm-run-all": "^4.1.5",
+    "ts-jest": "^29.1.1"
   }
 }
