--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm run build:backend && npm run build:frontend",
     "build:frontend": "cd frontend && npm run build",
     "build:backend": "cd backend && npm run build",
-    "test": "node scripts/run-tests.js",
+    "test": "node --no-warnings scripts/run-tests.js",
     "test:frontend": "cd frontend && npm test",
     "test:backend": "cd backend && npm test",
     "test:watch": "jest --watch",
