Enhance testing and coverage for UploadConfig: Update package.json to include additional Jest commands for coverage reporting. Expand upload middleware tests to validate filename generation, sanitization, and correct destination handling. Maintain adherence to best practices and documentation standards.

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
     "dev": "nodemon",
     "build": "tsc",
     "start": "node dist/server.js",
-    "test": "jest --forceExit --passWithNoTests"
+    "test": "jest --forceExit --passWithNoTests --coverage",
+    "test:watch": "jest --forceExit --passWithNoTests --watch",
+    "test:coverage": "jest --forceExit --passWithNoTests --coverage --coverageReporters=text --coverageReporters=html"
   },
   "dependencies": {
     "@types/nodemailer": "^7.0.4",
