--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "build": "npm run build:backend && npm run build:frontend",
     "build:frontend": "cd frontend && npm run build",
     "build:backend": "cd backend && npm run build",
-    "test": "node --no-warnings scripts/run-tests.js",
+    "test": "node --no-warnings scripts/run-tests.js --coverage",
     "test:frontend": "cd frontend && npm test",
     "test:backend": "cd backend && npm test",
     "test:watch": "jest --watch",
-    "test:coverage": "node scripts/run-tests.js --coverage",
+    "test:coverage": "node scripts/run-tests.js --coverage --coverageReporters=text --coverageReporters=html",
     "test:coverage:frontend": "cd frontend && npm run test:coverage",
     "test:coverage:backend": "cd backend && npm test",
     "lint": "npm run lint:frontend",
