--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,6 @@
     "test:coverage": "jest --forceExit --passWithNoTests --coverage --coverageReporters=text --coverageReporters=html"
   },
   "dependencies": {
-    "@types/nodemailer": "^7.0.4",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
@@ -25,20 +24,14 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
-    "@types/node": "^20.10.6",
+    "@types/nodemailer": "^7.0.4",
     "@types/sqlite3": "^3.1.11",
     "@types/supertest": "^6.0.2",
     "@types/validator": "^13.15.10",
-    "@vitejs/plugin-react": "^4.2.1",
-    "jest": "^29.7.0",
     "nodemon": "^3.1.11",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1",
-    "tsx": "^4.7.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "tsx": "^4.7.0"
   }
 }
