--- a/package.json
+++ b/package.json
@@ -3,26 +3,33 @@
   "version": "1.0.0",
   "type": "module",
   "private": true,
+  "workspaces": [
+    "frontend",
+    "backend"
+  ],
   "scripts": {
-    "dev": "cd backend && npm run dev",
-    "build": "npm run build:backend && npm run build:frontend",
-    "build:frontend": "cd frontend && npm run build",
-    "build:backend": "cd backend && npm run build",
+    "dev": "npm run dev --workspace=backend",
+    "build": "npm run build --workspaces",
+    "build:frontend": "npm run build --workspace=frontend",
+    "build:backend": "npm run build --workspace=backend",
     "test": "node --no-warnings scripts/run-tests.js --coverage",
-    "test:frontend": "cd frontend && npm test",
-    "test:backend": "cd backend && npm test",
+    "test:frontend": "npm run test --workspace=frontend",
+    "test:backend": "npm run test --workspace=backend",
     "test:watch": "jest --config config/jest.config.cjs --rootDir . --watch",
     "test:coverage": "node scripts/run-tests.js --coverage --coverageReporters=text --coverageReporters=html",
-    "test:coverage:frontend": "cd frontend && npm run test:coverage",
-    "test:coverage:backend": "cd backend && npm test",
+    "test:coverage:frontend": "npm run test:coverage --workspace=frontend",
+    "test:coverage:backend": "npm run test --workspace=backend",
     "lint": "npm run lint:frontend",
-    "lint:frontend": "cd frontend && npm run lint",
+    "lint:frontend": "npm run lint --workspace=frontend",
     "install:all": "npm install"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "npm-run-all": "^4.1.5",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.2.2"
   }
 }
