--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,9 @@
     "dev": "nodemon",
     "build": "tsc",
     "start": "node dist/server.js",
-    "test": "jest --forceExit --passWithNoTests --coverage",
-    "test:watch": "jest --forceExit --passWithNoTests --watch",
-    "test:coverage": "jest --forceExit --passWithNoTests --coverage --coverageReporters=text --coverageReporters=html"
+    "test": "jest --config jest.config.cjs --forceExit --passWithNoTests --coverage",
+    "test:watch": "jest --config jest.config.cjs --forceExit --passWithNoTests --watch",
+    "test:coverage": "jest --config jest.config.cjs --forceExit --passWithNoTests --coverage --coverageReporters=text --coverageReporters=html"
   },
   "dependencies": {
     "cors": "^2.8.5",
