--- a/package.json
+++ b/package.json
@@ -17,18 +17,13 @@
     "test:backend": "npm run test --workspace=backend",
     "test:watch": "jest --config config/jest.config.cjs --rootDir . --watch",
     "test:coverage": "node scripts/run-tests.js --coverage --coverageReporters=text --coverageReporters=html",
-    "test:coverage:frontend": "npm run test:coverage --workspace=frontend",
-    "test:coverage:backend": "npm run test --workspace=backend",
-    "lint": "npm run lint:frontend",
-    "lint:frontend": "npm run lint --workspace=frontend",
-    "install:all": "npm install"
+    "lint": "npm run lint --workspace=frontend"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "npm-run-all": "^4.1.5",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   }
