--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "@types/nodemailer": "^7.0.4",
     "@types/sqlite3": "^3.1.11",
     "@types/validator": "^13.15.10",
+    "@types/supertest": "^6.0.2",
     "nodemon": "^3.1.11",
     "supertest": "^7.1.3",
     "tsx": "^4.7.0"
