Update testing framework from Jest to Vitest: Refactored test scripts in package.json and backend/frontend configurations to utilize Vitest for improved performance and modern testing capabilities. Updated setup files to replace Jest-specific methods with Vitest equivalents, ensuring compatibility and enhancing test reliability.

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,9 @@
     "dev": "nodemon",
     "build": "tsc",
     "start": "node dist/server.js",
-    "test": "jest --config config/jest.config.cjs --rootDir . --forceExit --passWithNoTests --coverage --coverageDirectory=../coverage",
-    "test:watch": "jest --config config/jest.config.cjs --rootDir . --forceExit --passWithNoTests --watch",
-    "test:coverage": "jest --config config/jest.config.cjs --rootDir . --forceExit --passWithNoTests --coverage --coverageDirectory=../coverage --coverageReporters=text --coverageReporters=html"
+    "test": "vitest run --config ../config/vitest.workspace.ts --workspace backend --coverage",
+    "test:watch": "vitest --config ../config/vitest.workspace.ts --workspace backend",
+    "test:coverage": "vitest run --config ../config/vitest.workspace.ts --workspace backend --coverage"
   },
   "dependencies": {
     "cors": "^2.8.5",
