--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,9 @@
     "dev": "nodemon",
     "build": "tsc",
     "start": "node dist/server.js",
-    "test": "vitest run --workspace ../config/vitest.workspace.ts --project backend --coverage",
-    "test:watch": "vitest --workspace ../config/vitest.workspace.ts --project backend",
-    "test:coverage": "vitest run --workspace ../config/vitest.workspace.ts --project backend --coverage"
+    "test": "vitest run --config ../config/vitest.config.ts --include backend/** --coverage",
+    "test:watch": "vitest --config ../config/vitest.config.ts --include backend/**",
+    "test:coverage": "vitest run --config ../config/vitest.config.ts --include backend/** --coverage"
   },
   "dependencies": {
     "cors": "^2.8.5",
