Refactor server.ts to improve error handling and API route management: Added a 404 handler for non-existent API routes and enhanced the existing route for serving the React app to check for the existence of index.html. Introduced a centralized error handling middleware to log errors and return appropriate responses, improving server robustness. Updated test cases in server.test.ts to reflect changes in API behavior.

--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
     "build": "npm run build --workspaces",
     "build:frontend": "npm run build --workspace=frontend",
     "build:backend": "npm run build --workspace=backend",
-    "test": "vitest run --config config/vitest.config.ts --coverage --reporter=verbose --reporter=json --outputFile=test-results.json",
+    "test": "vitest run --config config/vitest.config.ts --coverage",
     "test:frontend": "vitest run --config config/vitest.config.ts --include frontend/** --coverage",
     "test:backend": "vitest run --config config/vitest.config.ts --include backend/** --coverage",
     "test:watch": "vitest --config config/vitest.config.ts",
     "test:coverage": "vitest run --config config/vitest.config.ts --coverage",
-    "test:output": "vitest run --config config/vitest.config.ts --coverage --reporter=verbose --reporter=json --outputFile=test-results.json",
     "lint": "npm run lint --workspace=frontend"
   },
   "devDependencies": {
