Refactor test scripts in package.json and vitest.setup.ts to streamline coverage reporting: Removed redundant execution of coverage report script from test commands and integrated it into the afterAll hook in vitest.setup.ts. This ensures the low coverage report is displayed only when coverage is enabled, enhancing test output clarity and maintaining test suite integrity.

--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "build": "npm run build --workspaces",
     "build:frontend": "npm run build --workspace=frontend",
     "build:backend": "npm run build --workspace=backend",
-    "test": "vitest run --config config/vitest.config.ts --coverage && node config/coverage-report-low.js",
-    "test:frontend": "vitest run --config config/vitest.config.ts --include frontend/** --coverage && node config/coverage-report-low.js",
-    "test:backend": "vitest run --config config/vitest.config.ts --include backend/** --coverage && node config/coverage-report-low.js",
+    "test": "vitest run --config config/vitest.config.ts --coverage; node config/coverage-report-low.js",
+    "test:frontend": "vitest run --config config/vitest.config.ts --include frontend/** --coverage; node config/coverage-report-low.js",
+    "test:backend": "vitest run --config config/vitest.config.ts --include backend/** --coverage; node config/coverage-report-low.js",
     "test:watch": "vitest --config config/vitest.config.ts",
-    "test:coverage": "vitest run --config config/vitest.config.ts --coverage && node config/coverage-report-low.js",
+    "test:coverage": "vitest run --config config/vitest.config.ts --coverage; node config/coverage-report-low.js",
     "coverage:low": "node config/coverage-report-low.js",
     "lint": "npm run lint --workspace=frontend"
   },
