--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "build": "npm run build --workspaces",
     "build:frontend": "npm run build --workspace=frontend",
     "build:backend": "npm run build --workspace=backend",
-    "test": "vitest run --config config/vitest.config.ts --coverage && node config/coverage-report-low.js",
+    "test": "node config/run-tests-with-coverage.js",
     "test:frontend": "vitest run --config config/vitest.config.ts --coverage && node config/coverage-report-low.js",
     "test:backend": "vitest run --config config/vitest.config.ts --coverage && node config/coverage-report-low.js",
     "test:watch": "vitest --config config/vitest.config.ts",
-    "test:coverage": "vitest run --config config/vitest.config.ts --coverage && node config/coverage-report-low.js",
+    "test:coverage": "node config/run-tests-with-coverage.js",
     "coverage:low": "node config/coverage-report-low.js",
     "lint": "npm run lint --workspace=frontend"
   },
