Update test configurations and improve test visibility: Upgraded the test scripts in package.json for better coverage reporting, modified run-tests-with-coverage.js to use execSync for direct output visibility, and adjusted vitest.config.ts to set verbose reporting by default. Additionally, removed outdated assertions in RemindersList tests to reflect recent component changes, enhancing overall test accuracy and clarity.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "build:frontend": "npm run build --workspace=frontend",
     "build:backend": "npm run build --workspace=backend",
     "test": "node config/run-tests-with-coverage.js",
+    "test:direct": "vitest run --config config/vitest.config.ts --reporter=verbose",
+    "test:simple": "node config/run-tests-simple.js",
+    "test:output": "node config/run-tests-with-output.js",
+    "test:json": "node config/run-tests-json.js",
+    "test:capture": "node config/run-tests-capture.js",
     "test:frontend": "vitest run --config config/vitest.config.ts --coverage && node config/coverage-report-low.js",
     "test:backend": "vitest run --config config/vitest.config.ts --coverage && node config/coverage-report-low.js",
     "test:watch": "vitest --config config/vitest.config.ts",
