feat: Implement core data models, services, and shared types for user, tracking, and reminder functionalities.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "private": true,
   "workspaces": [
     "frontend",
-    "backend"
+    "backend",
+    "packages/shared"
   ],
+
   "scripts": {
     "dev": "npm run dev --workspace=backend",
     "build": "npm run build --workspaces",
