--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "test:coverage": "vitest run --config ../config/vitest.config.ts --coverage"
   },
   "dependencies": {
+    "@habitus/shared": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
@@ -28,8 +29,8 @@
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.4",
     "@types/sqlite3": "^3.1.11",
-    "@types/validator": "^13.15.10",
     "@types/supertest": "^6.0.2",
+    "@types/validator": "^13.15.10",
     "nodemon": "^3.1.11",
     "supertest": "^7.1.3",
     "tsx": "^4.7.0"
