--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "test:coverage": "vitest run --config ../config/vitest.config.ts --include frontend/** --coverage"
   },
   "dependencies": {
+    "@habitus/shared": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
