--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,11 +1,11 @@
 {
     "compilerOptions": {
         "target": "ES2022",
-        "module": "ES2022",
+        "module": "NodeNext",
         "lib": [
             "ES2022"
         ],
-        "moduleResolution": "node",
+        "moduleResolution": "NodeNext",
         "types": [
             "node",
             "vitest/globals"
