feat: add exports field to package.json for module resolution
- Introduced an "exports" field in package.json to define module entry points for the main module and utils.
- Specified types and default exports for the main module and utility functions, enhancing module resolution and TypeScript support.

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,6 +4,20 @@
   "main": "dist/index.js",
   "type": "module",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./utils": {
+      "types": "./dist/utils/index.d.ts",
+      "default": "./dist/utils/index.js"
+    },
+    "./utils/*": {
+      "types": "./dist/utils/*.d.ts",
+      "default": "./dist/utils/*.js"
+    }
+  },
   "scripts": {
     "build": "tsc"
   },
