--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@habitus/shared": "^1.0.0",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
+    "pg": "^8.11.5",
     "sqlite3": "^5.1.7",
     "validator": "^13.15.23"
   },
@@ -27,7 +29,9 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
+    "@types/node": "^20.10.6",
     "@types/nodemailer": "^7.0.4",
+    "@types/pg": "^8.10.9",
     "@types/sqlite3": "^3.1.11",
     "@types/supertest": "^6.0.2",
     "@types/validator": "^13.15.10",
