--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "backend",
     "packages/shared"
   ],
-
   "scripts": {
     "dev": "npm run dev --workspace=backend",
-    "build": "npm run build --workspaces",
+    "build": "npm run build --workspace=@habitus/shared && npm run build --workspace=backend && npm run build --workspace=frontend",
     "build:frontend": "npm run build --workspace=frontend",
     "build:backend": "npm run build --workspace=backend",
     "test": "node config/run-tests-with-coverage.js",
