--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "dev": "nodemon",
     "build": "tsc",
     "start": "node dist/server.js",
+    "start:with-smtp-test": "node dist/start-with-smtp-test.js",
     "test": "vitest run --config ../config/vitest.config.ts --coverage",
     "test:watch": "vitest --config ../config/vitest.config.ts",
     "test:coverage": "vitest run --config ../config/vitest.config.ts --coverage",
