--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@habitus/shared": "^1.0.0",
+    "@types/cookie-parser": "^1.4.10",
     "cloudinary": "^2.8.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
