fix: refine savePreferences logic in NotificationsModal
- Updated savePreferences function to include an optional parameter for skipping the isSubmitting check, allowing for more flexible submission handling.
- Implemented flushSync to ensure immediate UI updates when setting the submitting state, enhancing responsiveness during preference saving.
- Adjusted channel selection logic to improve user experience by ensuring the UI reflects the submitting state accurately before async operations.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,9 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint . --config ../config/eslint.config.js --max-warnings 0",
-    "test": "vitest run --config ../config/vitest.config.ts --include frontend/** --coverage",
-    "test:watch": "vitest --config ../config/vitest.config.ts --include frontend/**",
-    "test:coverage": "vitest run --config ../config/vitest.config.ts --include frontend/** --coverage"
+    "test": "vitest run --config ../config/vitest.config.ts --coverage",
+    "test:watch": "vitest --config ../config/vitest.config.ts",
+    "test:coverage": "vitest run --config ../config/vitest.config.ts --coverage"
   },
   "dependencies": {
     "@habitus/shared": "^1.0.0",
