feat: Initialize frontend with Vite and React, including PWA support and an update prompt.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -9,6 +9,12 @@
         ],
         "module": "ESNext",
         "skipLibCheck": true,
+        "types": [
+            "node",
+            "vite-plugin-pwa/info",
+            "vite-plugin-pwa/client",
+            "vite-plugin-pwa/react"
+        ],
         /* Module interoperability */
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
