--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "jsdom": "^25.0.1",
     "typescript": "^5.2.2",
     "vitest": "^4.0.14"
+  },
+  "overrides": {
+    "node-gyp": "^10.0.0",
+    "tar": "^6.2.2"
   }
 }
