--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "vitest": "^4.0.14"
   },
   "overrides": {
-    "node-gyp": "^10.0.0",
+    "sqlite3": {
+      "node-gyp": "^10.0.0"
+    },
     "tar": "^6.2.2"
   }
 }
