--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@habitus/shared": "^1.0.0",
     "@types/cookie-parser": "^1.4.10",
+    "better-sqlite3": "^12.6.2",
     "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -23,10 +24,10 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "pg": "^8.11.5",
-    "sqlite3": "^5.1.7",
     "validator": "^13.15.23"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.10",
@@ -34,7 +35,6 @@
     "@types/node": "^20.10.6",
     "@types/nodemailer": "^7.0.4",
     "@types/pg": "^8.10.9",
-    "@types/sqlite3": "^3.1.11",
     "@types/supertest": "^6.0.2",
     "@types/validator": "^13.15.10",
     "nodemon": "^3.1.11",
